Dot header, xCL suggestion (blank)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 link_libraries(Bmp)
 
 
-add_executable(ae2f_Bmp_Test01 "test01/a.c")
-add_test(NAME ae2f_Bmp_Test01 COMMAND ae2f_Bmp_Test01)
+
+add_subdirectory("test00")
+add_subdirectory("test01")
