This commit will cause error. Do not use it.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "cl2.hpp": "c",
         "opencl.hpp": "c",
         "errglob.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
