--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = submodules/Core
 	url = https://github.com/yuisanae2f/ae2f_Core
 	
+[submodule "mod/ae2f/Core"]
+	path = mod/ae2f/Core
+	url = https://github.com/ae2f/Core
