--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,5 +2,5 @@ link_libraries(Bmp)
 
 project(BmpTest)
 
-add_executable(${PROJECT_NAME} "a.c")
+add_executable(${PROJECT_NAME} "a.c" "b.c")
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
