--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,6 @@
 	path = submodules/Core
 	url = https://github.com/yuisanae2f/ae2f_Core
 	
-[submodule "mod/ae2f/Core"]
-	path = mod/ae2f/Core
-	url = https://github.com/ae2f/Core
+[submodule "mod/ae2f/mov2"]
+	path = mod/ae2f/mov2
+	url = https://github.com/ae2f/mov2
