--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ enable_testing()
 
 if(NOT TARGET ${PROJECT_NAME})
 
-add_subdirectory(mod/ae2f/Core)
-link_libraries(Core)
+add_subdirectory(mod/ae2f/mov2)
+link_libraries(mov2)
 
 # Namespace Package
 include(GNUInstallDirs)
@@ -31,14 +31,12 @@ endif()
 include_directories(include)
 add_subdirectory(test)
 
-# Header
 target_include_directories(${PROJECT_NAME}
     INTERFACE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
-# 설치 설정
 install(TARGETS ${PROJECT_NAME}
     EXPORT ${PROJECT_NAME}Targets
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
@@ -48,14 +46,12 @@ install(DIRECTORY include/ae2f/
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ae2f
 )
 
-# 패키지 설정
 install(EXPORT ${PROJECT_NAME}Targets
     FILE ${PROJECT_NAME}Targets.cmake
     NAMESPACE ae2f::
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/
 )
 
-# 패키지 구성 파일 생성
 include(CMakePackageConfigHelpers)
 configure_package_config_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
