--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -5,5 +5,5 @@ include(CMakeFindDependencyMacro)
 include(CMakePackageConfigHelpers)
 include("${CMAKE_CURRENT_LIST_DIR}/BmpTargets.cmake")
 
-find_dependency(Core REQUIRED)
-link_libraries(ae2f::Core)
+find_dependency(mov2 REQUIRED)
+link_libraries(ae2f::mov2)
