--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(Bmp VERSION 5.14.6)
+project(Bmp VERSION 6.14.6)
 enable_testing()
 
 if(NOT TARGET ${PROJECT_NAME})
@@ -20,7 +20,8 @@ add_library(
     "include/ae2f/Bmp/Blend.h"
     "include/ae2f/Bmp/BitCount.h"
     "include/ae2f/Bmp/Src.h"
-    "src/Src/Double.c"
+    "src/Src.c"
+    "src/Src/Rect.c"
 )
 
 if(LINUX)
